...
                android:id="@+id/section_header_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/section_header_height"
                android:background="@drawable/view_border_top_bottom"
                android:paddingTop="@dimen/grid_padding_top">
    <TextView
        android:id="@+id/section_header_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/grid_margin_left"
        android:layout_marginTop="@dimen/grid_margin_top"
        android:textAppearance="@style/TextAppearance.Hyperwallet.Body2"/>
</RelativeLayout>
...
